News UAT/force-app/main/default/objects/Product_Order__c/fields/Previous_Product_Order_Status_For_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Previous_Product_Order_Status_For_Cancel__c</fullName>
    <label>Previous Product Order Status For Cancel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>