News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Product_Acronym__c</fullName>
    <formula>News_Xtend_Product_Ref__r.Acronym__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Acronym</label>
    <type>Text</type>
</CustomField>