News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Configuration</label>
    <referenceTo>cscfga__Product_Configuration__c</referenceTo>
    <relationshipLabel>Product Orders</relationshipLabel>
    <relationshipName>Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>