News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>Product_Configuration__r.cscfga__Product_Definition__r.cscfga__Description__c</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>