News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Node__c.field-meta.xml
<CustomField>
    <fullName>Product_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Product Node record product.</description>
    <label>Product Node</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Product Orders</relationshipLabel>
    <relationshipName>Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>