News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Order_End_Date_Buy_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Product_Order_End_Date_Buy_Sheet__c</fullName>
    <description>Set to the Product Order End Date unless Evergreen is true in which case the value is Product Order End Date + 1 Year</description>
    <formula>IF( ISBLANK(Flight_Period_End_Date__c) , IF(ISBLANK(Cancellation_Date__c), if (ISBLANK( Previous_End_Date_Override__c ), 
(if( Order__r.Evergreen__c = true , 
Proposed_Start_Date__c + Previous_End_Date_Buy_Sheet_add_1y__c, 
Product_Order_End_Date__c ) 
), 
Previous_End_Date_Override__c 
), Cancellation_Date__c),Flight_Period_End_Date__c )</formula>
    <inlineHelpText>Set to the Product Order End Date unless Evergreen is true in which case the value is Product Order End Date + 1 Year</inlineHelpText>
    <label>Previous End Date Buy Sheet</label>
    <type>Date</type>
</CustomField>