News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Order_Ready_To_Be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Product_Order_Ready_To_Be_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Order Ready To Be Reviewed</label>
    <type>Checkbox</type>
</CustomField>