News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Order_Start_Date__c</fullName>
    <label>Product Order Start Date</label>
    <type>Date</type>
</CustomField>