News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Order_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Order_Tier__c</fullName>
    <label>Product Order Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>