News UAT/force-app/main/default/objects/Product_Order__c/fields/Product_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Name__c</fullName>
    <description>Same value is in Product Configuration Attribute with Name of Product Type Name. Required for Buy Sheet Extract. Populated by a trigger</description>
    <inlineHelpText>Same value is in Product Configuration Attribute with Name of Product Type Name.</inlineHelpText>
    <label>Product Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>