News UAT/force-app/main/default/objects/Product_Order__c/fields/Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start_Date__c</fullName>
    <formula>Order__r.Proposed_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will display the Proposed Start Date from the Campaign Order. It cannot be edited on the Product Order; if a change to this field is needed, it must be updated on the Campaign Order.</inlineHelpText>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>