News UAT/force-app/main/default/objects/Product_Order__c/fields/Reason_For_Pause__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Pause__c</fullName>
    <label>Reason For Pause</label>
    <type>TextArea</type>
</CustomField>