News UAT/force-app/main/default/objects/Product_Order__c/fields/Recurring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Frequency__c</fullName>
    <label>Recurring Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Month</fullName>
            </value>
            <value>
                <fullName>3 Month</fullName>
                <default>true</default>
                <label>3 Month</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>