News UAT/force-app/main/default/objects/Product_Order__c/fields/Reset_QA_Items__c.field-meta.xml
<CustomField>
    <fullName>Reset_QA_Items__c</fullName>
    <description>This is to Reset the QA Items questions for Retraction Scenario. For Retraction, it would be set to YES, but when the Peer Review fails, the value would be reset to No.</description>
    <label>Reset QA Items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>