News UAT/force-app/main/default/objects/Product_Order__c/fields/Retail_CPM__c.field-meta.xml
<CustomField>
    <fullName>Retail_CPM__c</fullName>
    <label>Retail CPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>