News UAT/force-app/main/default/objects/Product_Order__c/fields/Retail_Rate__c.field-meta.xml
<CustomField>
    <fullName>Retail_Rate__c</fullName>
    <label>Retail Monthly Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>