News UAT/force-app/main/default/objects/Product_Order__c/fields/Retail_Spend__c.field-meta.xml
<CustomField>
    <fullName>Retail_Spend__c</fullName>
    <label>Retail Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>