News UAT/force-app/main/default/objects/Product_Order__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <formula>Order__r.Sales_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>