News UAT/force-app/main/default/objects/Product_Order__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <description>Contains value in State unless overriden by  Sales Team Override</description>
    <formula>if(ISBLANK( Sales_Team_Override__c ), 
  Order__r.State__c,
  Sales_Team_Override__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains value in State unless overriden by  Sales Team Override</inlineHelpText>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>