News UAT/force-app/main/default/objects/Product_Order__c/fields/Sales_Team_Override__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Override__c</fullName>
    <description>Used to identify the sales team. Defaults to Order State but can be manually overriden</description>
    <inlineHelpText>Used to identify the sales team when Order State is not suitable</inlineHelpText>
    <label>Sales Team Override</label>
    <length>30</length>
    <type>Text</type>
</CustomField>