News UAT/force-app/main/default/objects/Product_Order__c/fields/SEM_Daily_Spend__c.field-meta.xml
<CustomField>
    <fullName>SEM_Daily_Spend__c</fullName>
    <description>Search Engine Marketing Daily Spend</description>
    <formula>Wholesale_Rate__c  * 12 / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Search Engine Marketing Daily Spend = Wholesale Monthly Spend x 12 / 265</inlineHelpText>
    <label>SEM Daily Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>