News UAT/force-app/main/default/objects/Product_Order__c/fields/Setup_Readiness_Comment__c.field-meta.xml
<CustomField>
    <fullName>Setup_Readiness_Comment__c</fullName>
    <label>Setup Readiness Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>