News UAT/force-app/main/default/objects/Product_Order__c/fields/Social_Content_Plan_Approved__c.field-meta.xml
<CustomField>
    <fullName>Social_Content_Plan_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is internal field which will be set at the end of Social Setup process, and RTB-Social process will Monitor for this field to proceed at step 135</description>
    <label>Social Content Plan Approved</label>
    <type>Checkbox</type>
</CustomField>