News UAT/force-app/main/default/objects/Product_Order__c/fields/Social_Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Social_Content_URL__c</fullName>
    <label>Social Content URL</label>
    <type>TextArea</type>
</CustomField>