News UAT/force-app/main/default/objects/Product_Order__c/fields/Social_Recurring_Status__c.field-meta.xml
<CustomField>
    <fullName>Social_Recurring_Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <label>Social Recurring Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>Peer Review Failed</fullName>
            </value>
            <value>
                <fullName>Ready To Go Live</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>