News UAT/force-app/main/default/objects/Product_Order__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Order__r.State__c</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>