News UAT/force-app/main/default/objects/Product_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Returned to CM</fullName>
            </value>
            <value>
                <fullName>Initial QA</fullName>
            </value>
            <value>
                <fullName>Peer review</fullName>
            </value>
            <value>
                <fullName>Peer review failed</fullName>
            </value>
            <value>
                <fullName>Ready to go live</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending For Pause</fullName>
            </value>
            <value>
                <fullName>Pending For Cancel</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Fulfilment Started</fullName>
            </value>
            <value>
                <fullName>Campaign Ended</fullName>
            </value>
            <value>
                <fullName>Cancellation Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>