News UAT/force-app/main/default/objects/Product_Order__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>DATE(
     YEAR (TODAY() + 30),
     MONTH (TODAY() + 30),
     20)</formula>
    <label>Test</label>
    <type>Date</type>
</CustomField>