News UAT/force-app/main/default/objects/Product_Order__c/fields/Total_Budget_Cap__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Cap__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &#39;Pending For Cancel&#39;), Retail_Rate__c / 30.4 * Duration_days__c, Retail_Rate__c * Duration_months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>