News UAT/force-app/main/default/objects/Product_Order__c/fields/Trigger_To_Pause_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Trigger_To_Pause_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger To Pause Campaign</label>
    <type>Checkbox</type>
</CustomField>