News UAT/force-app/main/default/objects/Product_Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicate the type of campaign order line item</description>
    <inlineHelpText>Indicate the type of campaign order line item</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Unchanged</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Unchanged (Fulfilled)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>