News UAT/force-app/main/default/objects/Product_Order__c/fields/Website_Live_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_Live_URL__c</fullName>
    <label>Website Live URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>