News UAT/force-app/main/default/objects/Product_Order__c/fields/Website_Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_Preview_URL__c</fullName>
    <label>Website Preview URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>