News UAT/force-app/main/default/objects/Product_Order__c/fields/Wholesale_CPC__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_CPC__c</fullName>
    <label>Wholesale CPC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>