News UAT/force-app/main/default/objects/Product_Order__c/fields/Wholesale_CPM__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_CPM__c</fullName>
    <label>Wholesale CPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>