News UAT/force-app/main/default/objects/Product_Order__c/fields/Wholesale_Spend__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Spend__c</fullName>
    <label>Wholesale Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>