News UAT/force-app/main/default/objects/Product_Order__c/fields/X7_Days_Before_Resume_Date__c.field-meta.xml
<CustomField>
    <fullName>X7_Days_Before_Resume_Date__c</fullName>
    <description>This is internal field used to send the notification 7 days prior to restart date</description>
    <formula>Campaign_Restart_Date__c - 7</formula>
    <label>7 Days Before Resume Date</label>
    <type>Date</type>
</CustomField>