News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Call_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Call_Tracking</fullName>
    <active>true</active>
    <label>Call Tracking</label>
</RecordType>