News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Catch_Up_TV.recordType-meta.xml
<RecordType>
    <fullName>Catch_Up_TV</fullName>
    <active>true</active>
    <label>Catch Up TV</label>
</RecordType>