News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Email_Setup.recordType-meta.xml
<RecordType>
    <fullName>Email_Setup</fullName>
    <active>true</active>
    <label>Email Setup</label>
</RecordType>