News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Landing_Pages.recordType-meta.xml
<RecordType>
    <fullName>Landing_Pages</fullName>
    <active>true</active>
    <label>Landing Pages</label>
</RecordType>