News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Marketplace_Feed.recordType-meta.xml
<RecordType>
    <fullName>Marketplace_Feed</fullName>
    <active>true</active>
    <label>Marketplace Feed</label>
</RecordType>