News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Media_Spend.recordType-meta.xml
<RecordType>
    <fullName>Media_Spend</fullName>
    <active>true</active>
    <label>Media Spend</label>
</RecordType>