News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Programatic_Audio.recordType-meta.xml
<RecordType>
    <fullName>Programatic_Audio</fullName>
    <active>true</active>
    <label>Programatic Audio</label>
</RecordType>