News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Programmatic_Audio.recordType-meta.xml
<RecordType>
    <fullName>Programmatic_Audio</fullName>
    <active>true</active>
    <label>Programmatic Audio</label>
</RecordType>