News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Real_Time_Bidding.recordType-meta.xml
<RecordType>
    <fullName>Real_Time_Bidding</fullName>
    <active>true</active>
    <label>Real Time Bidding</label>
</RecordType>