News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Real_Time_Bidding_CPC.recordType-meta.xml
<RecordType>
    <fullName>Real_Time_Bidding_CPC</fullName>
    <active>true</active>
    <label>Real Time Bidding CPC</label>
</RecordType>