News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/RTB_Media_Spend.recordType-meta.xml
<RecordType>
    <fullName>RTB_Media_Spend</fullName>
    <active>true</active>
    <label>RTB Media Spend</label>
</RecordType>