News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Search_Engine_Marketing.recordType-meta.xml
<RecordType>
    <fullName>Search_Engine_Marketing</fullName>
    <active>true</active>
    <label>Search Engine Marketing</label>
</RecordType>