News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Search_Engine_Optimisation.recordType-meta.xml
<RecordType>
    <fullName>Search_Engine_Optimisation</fullName>
    <active>true</active>
    <label>Search Engine Optimisation</label>
</RecordType>