News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Social.recordType-meta.xml
<RecordType>
    <fullName>Social</fullName>
    <active>true</active>
    <label>Social</label>
</RecordType>