News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Social_Setup.recordType-meta.xml
<RecordType>
    <fullName>Social_Setup</fullName>
    <active>true</active>
    <label>Social Setup</label>
</RecordType>