News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Web_Dev.recordType-meta.xml
<RecordType>
    <fullName>Web_Dev</fullName>
    <active>true</active>
    <label>Web Dev</label>
</RecordType>