News UAT/force-app/main/default/objects/Product_Order__c/recordTypes/Website.recordType-meta.xml
<RecordType>
    <fullName>Website</fullName>
    <active>true</active>
    <label>Website</label>
</RecordType>