News UAT/force-app/main/default/objects/Product_Order__c/validationRules/Non_Standard_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Standard_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Duration_Type__c, &#39;Non-standard&#39;) &amp;&amp;  Duration_Comment__c ==&#39;&#39;</errorConditionFormula>
    <errorDisplayField>Duration_Comment__c</errorDisplayField>
    <errorMessage>Populate Duration Comment field.</errorMessage>
</ValidationRule>