News UAT/force-app/main/default/objects/Product_Order__c/validationRules/PO_Restart_Date_less_than_TODAY.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Restart_Date_less_than_TODAY</fullName>
    <active>true</active>
    <description>The Product Order Restart Date must not be in the past.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c,&quot;Pending for Pause&quot;), 
Campaign_Restart_Date__c &lt; TODAY () 
)</errorConditionFormula>
    <errorDisplayField>Campaign_Restart_Date__c</errorDisplayField>
    <errorMessage>The Product Order Restart Date must not be in the past. Populate the date as today&#39;s date or a date in the future.</errorMessage>
</ValidationRule>