News UAT/force-app/main/default/objects/Product_Order__c/validationRules/Populate_BF_Invalid_Form_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_BF_Invalid_Form_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Briefing_Form_Valid__c, &#39;No&#39;) &amp;&amp;   ISPICKVAL( Briefing_Form_Not_Valid__c , &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Briefing_Form_Not_Valid__c</errorDisplayField>
    <errorMessage>Please provide more details regarding invalid briefing form</errorMessage>
</ValidationRule>