News UAT/force-app/main/default/objects/Product_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Order_Start_Date__c</columns>
    <columns>Next_Business_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <label>All</label>
</ListView>