News UAT/force-app/main/default/objects/Product_Order__c/listViews/All_Not_Started.listView-meta.xml
<ListView>
    <fullName>All_Not_Started</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product_Order_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All Not Started</label>
</ListView>