News UAT/force-app/main/default/objects/Product_Order__c/listViews/Catch_Up_TV.listView-meta.xml
<ListView>
    <fullName>Catch_Up_TV</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>News_Xtend_Product_Ref__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Order__c.Catch_Up_TV</value>
    </filters>
    <label>Catch Up TV</label>
</ListView>