News UAT/force-app/main/default/objects/Product_Order__c/listViews/Landing_Pages.listView-meta.xml
<ListView>
    <fullName>Landing_Pages</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>News_Xtend_Product_Ref__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Order__c.Landing_Pages</value>
    </filters>
    <label>Landing Pages</label>
</ListView>