News UAT/force-app/main/default/objects/Product_Order__c/listViews/My_Product_Orders.listView-meta.xml
<ListView>
    <fullName>My_Product_Orders</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Customer_Tier__c</columns>
    <columns>Product_Order_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_Fulfilment_Owner__c</field>
        <operation>contains</operation>
        <value>Ivana</value>
    </filters>
    <filters>
        <field>Assigned_Social_Owner__c</field>
        <operation>contains</operation>
        <value>Ivana</value>
    </filters>
    <label>My Product Orders</label>
</ListView>