News UAT/force-app/main/default/objects/Product_Order__c/listViews/Paused_Product_Orders.listView-meta.xml
<ListView>
    <fullName>Paused_Product_Orders</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Fulfilment_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Pause_Start_Date__c</columns>
    <columns>Campaign_Restart_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Paused,Pending For Pause</value>
    </filters>
    <label>Paused Product Orders</label>
</ListView>