News UAT/force-app/main/default/objects/Product_Order__c/listViews/Product_Orders_Not_Live.listView-meta.xml
<ListView>
    <fullName>Product_Orders_Not_Live</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Fulfilment_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Order_Start_Date__c</columns>
    <columns>Product_Order_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Live</value>
    </filters>
    <label>Product Orders Not Live</label>
</ListView>