News UAT/force-app/main/default/objects/Product_Order__c/listViews/RTB.listView-meta.xml
<ListView>
    <fullName>RTB</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Order_Start_Date__c</columns>
    <columns>Product_Node__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Order__c.Real_Time_Bidding</value>
    </filters>
    <label>RTB</label>
</ListView>