News UAT/force-app/main/default/objects/Product_Order__c/listViews/RTB_Display.listView-meta.xml
<ListView>
    <fullName>RTB_Display</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Order_Start_Date__c</columns>
    <columns>Next_Optimisation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Order__c.Real_Time_Bidding</value>
    </filters>
    <label>RTB (Display)</label>
</ListView>